--- a/Yabber/Yabber.csproj
+++ b/Yabber/Yabber.csproj
@@ -81,13 +81,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\GitHub\JKAnderson\SoulsFormats\SoulsFormats\SoulsFormats.csproj">
+    <Content Include="icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\SoulsFormats\SoulsFormats\SoulsFormats.csproj">
       <Project>{22C664BD-877B-44DF-8ECF-2808522469A8}</Project>
       <Name>SoulsFormats</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
