--- a/Yabber/Yabber.csproj
+++ b/Yabber/Yabber.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Formats\BXF4.cs" />
     <Compile Include="Formats\BND4.cs" />
     <Compile Include="Formats\BND3.cs" />
+    <Compile Include="Formats\FMG.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Formats\TPF.cs" />
