--- a/Yabber/Yabber.csproj
+++ b/Yabber/Yabber.csproj
@@ -75,6 +75,8 @@
     <Compile Include="Formats\BND3.cs" />
     <Compile Include="Formats\GPARAM.cs" />
     <Compile Include="Formats\FMG.cs" />
+    <Compile Include="Formats\LUAGNL.cs" />
+    <Compile Include="Formats\LUAINFO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Formats\TPF.cs" />
