.000 support (unpack only), friendly exceptions, some project config

--- a/Yabber/Yabber.csproj
+++ b/Yabber/Yabber.csproj
@@ -78,6 +78,8 @@
     <Compile Include="Formats\FMG.cs" />
     <Compile Include="Formats\LUAGNL.cs" />
     <Compile Include="Formats\LUAINFO.cs" />
+    <Compile Include="Formats\Zero3.cs" />
+    <Compile Include="FriendlyException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Formats\TPF.cs" />
@@ -91,7 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\SoulsFormats\SoulsFormats\SoulsFormats.csproj">
-      <Project>{22C664BD-877B-44DF-8ECF-2808522469A8}</Project>
+      <Project>{e6064585-8742-44a9-afbc-75288ad42527}</Project>
       <Name>SoulsFormats</Name>
     </ProjectReference>
   </ItemGroup>
