working conversion of MSB3 Parts

--- a/Yabber/Yabber.csproj
+++ b/Yabber/Yabber.csproj
@@ -58,6 +58,9 @@
     <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
@@ -77,6 +80,7 @@
     <Compile Include="Formats\YFFX.cs" />
     <Compile Include="Formats\YGPARAM.cs" />
     <Compile Include="Formats\YFMG.cs" />
+    <Compile Include="Formats\YMSB3.cs" />
     <Compile Include="Formats\YLUAGNL.cs" />
     <Compile Include="Formats\YLUAINFO.cs" />
     <Compile Include="Formats\YZero3.cs" />
@@ -88,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
